--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "framer-motion": "^11.2.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
