--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "server:dev": "nodemon --watch server --ext ts --exec \"npx tsx\" server/index.ts",
+    "server:start": "npx tsx server/index.ts",
+    "db:init": "npx tsx server/init-db.ts",
+    "db:seed": "npx tsx server/seed-db.ts",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -81,6 +85,7 @@
     "prettier": "^3.4.0",
     "supertest": "^7.2.2",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "^5",
     "typescript-eslint": "^8.0.0",
     "vitest": "^2.1.0"
