--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tms",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -86,7 +87,7 @@
     "supertest": "^7.2.2",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
-    "typescript": "^5",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.0.0",
     "vitest": "^2.1.0"
   }
